--- a/iDeploy_pipeline/pipeline.yml
+++ b/iDeploy_pipeline/pipeline.yml
@@ -1,44 +1,35 @@
 trigger:
   branches:
-   include:
-     - TestBranch
-
-
+    include:
+    - TestBranch
 variables:
-    buildPlatform: 'x86'
-    imageName: 'windows-2019'
-    artifactName: 'Ideploy-drop'
-    gradleOption: '-Xmx3072m'
-    jdkVersion: '1.13'
-    gradleFile: 'test1'
-    contentPath: '**/target/*.jar'
-    option: ''
-
+  buildPlatform: Any CPU
+  imageName: windows-2019
+  artifactName: Ideploy-drop
+  gradleOption: -Xmx3072m
+  jdkVersion: 1.13
+  gradleFile: test11
+  contentPath: '**/target/*.jar'
+  option: ''
 pool:
-    vmImage: '$(imageName)'
-
+  vmImage: $(imageName)
 steps:
 - task: Gradle@2
   inputs:
     workingDirectory: ' '
-    gradleWrapperFile: '$(gradleFile)'
-    
-    gradleOptions: '$(gradleOption)'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '$(jdkVersion)'
-    jdkArchitectureOption: '$(buildPlatform)'
+    gradleWrapperFile: $(gradleFile)
+    gradleOptions: $(gradleOption)
+    javaHomeOption: JDKVersion
+    jdkVersionOption: $(jdkVersion)
+    jdkArchitectureOption: $(buildPlatform)
     publishJUnitResults: false
-    
-    tasks: 'build'
-   
+    tasks: build
 - task: CopyFiles@2
   inputs:
-    contents: '$(contentPath)'
-    targetFolder: '$(build.artifactStagingDirectory)'
-
+    contents: $(contentPath)
+    targetFolder: $(build.artifactStagingDirectory)
 - task: PublishBuildArtifacts@1
   condition: succeededOrFailed()
   inputs:
-    artifactName: '$(artifactName)'
-    pathToPublish: '$(build.artifactStagingDirectory)'
-
+    artifactName: $(artifactName)
+    pathToPublish: $(build.artifactStagingDirectory)
